# pairs_robofly_core

./: .gitignore  README.md
docker/: README.md
docker/hailo_ai/: Dockerfile  README.md  build_image.sh
docker/shared_data/camera_tests/: build_image.sh  export_image.sh
docker/shared_data/gnss/: build_image.sh  export_image.sh
docker/shared_data/vio/: Dockerfile  build_image.sh  export_image.sh
docker/simulation/: compose.yaml  down.sh  stack.env  up.sh
docker/simulation/config/: custom_config.yaml
docker/testing_sessions/test_cameras/: laptop_view_camera.yaml  run.sh
docker/testing_sessions/test_nimbro/: laptop_nimbro_connection.env  laptop_nimbro_connection.yaml  run.sh  stop.sh
docker/uav_sessions/camera_test_bottom/: compose.yaml
docker/uav_sessions/camera_test_front/: compose.yaml  stack.env
docker/uav_sessions/hailo_ai_yolo/: compose.yaml  stack.env
ros_packages/pairs_robofly_core/: CMakeLists.txt  package.xml
ros_packages/pairs_robofly_core/config/: platform_config.yaml
ros_packages/pairs_robofly_core/config/open_vins/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros_packages/pairs_robofly_core/launch/: open_vins.launch  vins_republisher.launch
ros_packages/pairs_robofly_example/: CMakeLists.txt  README.md  package.xml
ros_packages/pairs_robofly_example/config/: robofly_example.yaml
ros_packages/pairs_robofly_example/launch/: robofly_example.launch
ros_packages/pairs_robofly_example/scripts/: robofly_example.py
setup/docker_registry/: README.md  compose.yaml  down.sh
setup/portainer/: README.md
(+30 files in other folders)
